# mlops_final

./: Makefile  README.md  app.py  best_model_info.json  dvc.yaml  mlflow.db  params.yaml  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/processed/: .gitignore
data/raw/: newdata.csv  train_new.csv
metrics/: classification_report_Bagging.txt  classification_report_DecisionTree.txt  classification_report_Ensemble_XGB_AdaBoost.txt  classification_report_Ensemble_XGB_CatBoost_Bagging.txt  classification_report_Ensemble_XGB_RF_DT.txt  classification_report_ExtraTree.txt  classification_report_KNeighbors.txt  classification_report_RandomForest.txt  classification_report_SGD.txt  confusion_matrix_AdaBoost.txt  confusion_matrix_Bagging.txt  confusion_matrix_DecisionTree.txt  confusion_matrix_Ensemble_XGB_CatBoost_Bagging.txt  confusion_matrix_Ensemble_XGB_RF_DT.txt  confusion_matrix_ExtraTree.txt  confusion_matrix_RandomForest.txt  confusion_matrix_SGD.txt
models/: .gitignore  Ensemble_XGB_AdaBoost_predictions.csv  Ensemble_XGB_CatBoost_Bagging_predictions.csv  Ensemble_XGB_LGBM_CatBoost_predictions.csv  Ensemble_XGB_RF_DT_predictions.csv
notebooks/: CleanedDF.csv  Data Clean & Transformation .ipynb  EDA.ipynb  Exploratory Analysis.ipynb  Final Model Output.ipynb  Untitled-1.py  dataclean.py  eda.py  high_churn_list_model.csv  telecom_churn_eda.py
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
reports/: data_and_target_drift_dashboard.html
(+337 files in other folders)
