[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlops_final"
version = "0.0.1"
description = "Mlops final project full pipeline"
authors = [
  { name = "Marwan" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["mlops_final"]
include = ["pyproject.toml", "mlops_final/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mlops_final"]
force-sort-within-sections = true

